Minor spacing fix for form error title heading.

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -260,7 +260,7 @@ form.content, form.user {
 #error_explanation h3 {
   background: image_url('error.png') no-repeat;
   padding-left: 30px;
-  margin: 0;
+  margin: 0 0 0.4em;
 }
 
 #error_explanation ul {
